New Works block added

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 					<img src="images/photo1.jpg">
 					<div class="saturation"></div>
 					<div class="social-list">
-						<a href="#" class="link"><img src="images/facebook.png"></a>
-						<a href="#" class="link"><img src="images/twitter.png"></a>
-						<a href="#" class="link"><img src="images/google.png"></a>
-						<a href="#" class="link"><img src="images/linkedin.png"></a>
+						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/twitter.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/google.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
 
@@ -85,10 +85,10 @@
 					<img src="images/photo2.jpg">
 					<div class="saturation"></div>
 					<div class="social-list">
-						<a href="#" class="link"><img src="images/facebook.png"></a>
-						<a href="#" class="link"><img src="images/twitter.png"></a>
-						<a href="#" class="link"><img src="images/google.png"></a>
-						<a href="#" class="link"><img src="images/linkedin.png"></a>
+						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/twitter.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/google.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
 
@@ -102,10 +102,10 @@
 					<img src="images/photo3.jpg">
 					<div class="saturation"></div>
 					<div class="social-list">
-						<a href="#" class="link"><img src="images/facebook.png"></a>
-						<a href="#" class="link"><img src="images/twitter.png"></a>
-						<a href="#" class="link"><img src="images/google.png"></a>
-						<a href="#" class="link"><img src="images/linkedin.png"></a>
+						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/twitter.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/google.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
 
@@ -119,10 +119,10 @@
 					<img src="images/photo4.jpg">
 					<div class="saturation"></div>
 					<div class="social-list">
-						<a href="#" class="link"><img src="images/facebook.png"></a>
-						<a href="#" class="link"><img src="images/twitter.png"></a>
-						<a href="#" class="link"><img src="images/google.png"></a>
-						<a href="#" class="link"><img src="images/linkedin.png"></a>
+						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/twitter.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/google.png" alt="Symbol"></a>
+						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
 
@@ -131,7 +131,110 @@
 					<span class="position">Head of Ideas</span>
 				</div>
 			</div>
-		</div>		
+		</div>	
+		<div class="arrow-right">
+			<img src="images/arrow-right.png" alt="Symbol">
+		</div>
+		<div class="arrow-left">
+		<img src="images/arrow-left.png" alt="Symbol">	
+		</div>	
+	</div>
+	<div class="our-works">
+		<div class="section-name">
+			<h2 class="section-title">latest works</h2>
+			<div class="menu-works">
+				<ul class="works-list">
+					<li class="item"><a href="#" class="link">All</a></li>
+					<li class="item"><a href="#" class="link">Branding</a></li>
+					<li class="item"><a href="#" class="link">Design</a></li>
+					<li class="item"><a href="#" class="link">Development</a></li>
+					<li class="item"><a href="#" class="link">Strategy</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="work-levels">
+			<div class="level">
+				<img src="images/photo-work1.jpg" alt="">
+				<div class="saturation-red"></div>
+				<div class="continue">
+					<h3 class="title">Hair Dresser</h3>
+					<span class="text">Brandin</span>
+					<a href="#" class="link">view</a>
+				</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work2.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work3.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work4.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work5.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work6.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work7.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work8.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+			<div class="level">
+				<img src="images/photo-work9.jpg" alt="" >
+				<div class="saturation-red"></div>
+				<div class="continue">
+						<h3 class="title">Hair Dresser</h3>
+						<span class="text">Brandin</span>
+						<a href="#" class="link">view</a>
+					</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
