new block reviews has been added

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				<div class="continue">
 					<h3 class="title">Hair Dresser</h3>
 					<span class="text">Brandin</span>
-					<a href="#" class="link">view</a>
+					<a href="#" class="link">view <img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 				</div>
 			</div>
 			<div class="level">
@@ -168,7 +168,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -177,7 +177,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -186,7 +186,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -195,7 +195,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -204,7 +204,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -213,7 +213,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -222,7 +222,7 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
 			<div class="level">
@@ -231,9 +231,71 @@
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
-						<a href="#" class="link">view</a>
+						<a href="#" class="link">view<img src="images/arrow-red.png" alt="Arrow" class="arrow"></a>
 					</div>
 			</div>
+		</div>
+	</div>
+	<div class="reviews">
+		<div class="saturation-red"></div>
+		<div class="review">
+			<span class="text">Do you like OUR WORK so far?</span>
+			<span class="text">Let's talk about YOUR PROJECT!</span>
+			<a href="#" class="link">get in touch</a>
+		</div>
+	</div>
+	<div class="news">
+		<div class="section-name">
+			<h2 class="section-title">recent blog posts</h2>
+			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+		</div>
+		<div class="new">
+			<div class="photo">
+				<img src="images/photo6.jpg">
+			</div>
+			<div class="description">
+				<div class="name">
+					<span class="title">Startup ideas needs to be funded </span>
+					<span class="author">By Khalil Uddin in Development </span>
+				</div>
+				<div class="text-new">
+					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et dolore aliquyam erat, sed diam </p>
+				</div>
+				<a href="#" class="link">read more</a>
+			</div>
+		</div>
+		<div class="new">
+			<div class="photo">
+				<img src="images/photo7.jpg">
+			</div>
+			<div class="description">
+				<div class="name">
+					<span class="title">User Interface Designing Elements</span>
+					<span class="author">By Khalil Uddin in Development </span>
+				</div>
+				<div class="text-new">
+					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor idunt ut labore et dolore aliquyam </p>
+				</div>
+				<a href="#" class="link">read more</a>
+			</div>
+		</div>
+	</div>
+	<div class="brends">
+		<div class="brend-symbols">
+			<img src="images/brend-photo1.png">
+			<img src="images/brend-photo2.png">
+			<img src="images/brend-photo3.png">
+			<img src="images/brend-photo4.png">
+			<img src="images/brend-photo5.png">
+		</div>
+		<div class="quote">
+			<p class="text">Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum</p>
+			<span class="author">John Doe, Google Inc.</span>
+		</div>
+		<div class="digest-block">
+			<span class="digest-active"></span>
+			<span class="digest"></span>
+			<span class="digest"></span>
 		</div>
 	</div>
 </body>
