--- a/index.html
+++ b/index.html
@@ -254,9 +254,13 @@
 				<img src="images/photo6.jpg">
 			</div>
 			<div class="description">
+				<div class="date">
+					<span class="number">18</span>
+					<span class="month">oct</span>
+				</div>
 				<div class="name">
 					<span class="title">Startup ideas needs to be funded </span>
-					<span class="author">By Khalil Uddin in Development </span>
+					<span class="author">By <span class="allotment">Khalil</span> Uddin in <span class="allotment">Development</span> </span>
 				</div>
 				<div class="text-new">
 					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et dolore aliquyam erat, sed diam </p>
@@ -269,9 +273,13 @@
 				<img src="images/photo7.jpg">
 			</div>
 			<div class="description">
+					<div class="date">
+							<span class="number">18</span>
+							<span class="month">oct</span>
+						</div>
 				<div class="name">
 					<span class="title">User Interface Designing Elements</span>
-					<span class="author">By Khalil Uddin in Development </span>
+					<span class="author">By <span class="allotment">Khalil</span> Uddin in <span class="allotment">Development</span> </span>
 				</div>
 				<div class="text-new">
 					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor idunt ut labore et dolore aliquyam </p>
@@ -296,6 +304,50 @@
 			<span class="digest-active"></span>
 			<span class="digest"></span>
 			<span class="digest"></span>
+		</div>
+	</div>
+	<div class="contact">
+		<div class="section-name">
+			<h2 class="section-title">get in touch</h2>
+			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+		</div>
+		<div class="our-contacts">
+			<div class="address">
+				<img src="images/address.png" alt="" class="symbol">
+				<h3 class="title">address</h3>
+				<p class="data"><span class="text">312, 7th Ave, New York</span>NY 101200, United States of America</p>
+			</div>
+			<div class="telephone">
+				<img src="images/phone.png" alt="" class="symbol">
+				<h3 class="title">hotline (24x7)</h3>
+				<p class="data"><a href="tel:+650052300" class="link">+65 0052 300</a>, <a href="tel:+6588251210" class="link">+65 88251 210</a>, <a href="tel:+8801723511340" class="link">+88 01723 511 340</a></p>
+
+			</div>
+			<div class="email">
+				<img src="images/mail.png" alt="" class="symbol">
+				<h3 class="title">e-mail</h3>
+				<p class="data"><a href="shapedtheme@gmail.com" class="link">shapedtheme@gmail.com</a>, <a href="khalilkode@gmail.com" class="link"> khalilkode@gmail.com  </a></p>
+	
+			</div>
+		</div>
+		<div class="latter">
+			<form id="formSubscribe">
+				<div class="form">
+					<input type="text" placeholder="your name" class="label">
+				</div>
+				<div class="form">
+					<input type="email" placeholder="your e-mail" class="label">
+				</div>
+				<div class="form">
+					<input type="text" placeholder="your subject" class="label">
+				</div>
+				<div class="form">
+					<input type="text" placeholder="company name" class="label">
+				</div>
+				<div class="form-latter">
+					<input type="text" placeholder="write your message" class="label" >
+				</div>
+			</form>
 		</div>
 	</div>
 </body>
