New block footer has been added

--- a/index.html
+++ b/index.html
@@ -37,17 +37,25 @@
 		</div>
 		<div class="services-list">
 			<div class="services-item">
-				<a href="#" class="symbol-link-letter"></a>
+				<div class="item">
+					<a href="#" class="symbol-link"><img src="images/letter-a.png" class="symbol"></a>
+					<a href="#" class="symbol-link-white"><img src="images/letter-a-white.png" class="symbol"></a>
+				</div>
 				<h3 class="title">Clean Typography</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
 			</div>
 			<div class="services-item">
-				<a href="#" class="symbol-link"></a>
+				<div class="item">
+					<a href="#" class="symbol-link-hooks">&#60;/&#62;</a>
+				</div>
 				<h3 class="title">Clean Typography</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
 			</div>
 			<div class="services-item">
-				<a href="#" class="symbol-link-help"></a>
+				<div class="item">
+					<a href="#" class="symbol-link"><img src="images/help.png" class="symbol"></a>
+					<a href="#" class="symbol-link-white"><img src="images/help-white.png" class="symbol"></a>
+				</div>
 				<h3 class="title">Clean Typography</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
 			</div>
@@ -290,11 +298,21 @@
 	</div>
 	<div class="brends">
 		<div class="brend-symbols">
-			<img src="images/brend-photo1.png">
-			<img src="images/brend-photo2.png">
-			<img src="images/brend-photo3.png">
-			<img src="images/brend-photo4.png">
-			<img src="images/brend-photo5.png">
+			<div class="photo">
+				<img src="images/brend-photo1.png">
+			</div>
+			<div class="photo">
+				<img src="images/brend-photo2.png">
+			</div>
+			<div class="photo">
+				<img src="images/brend-photo3.png">
+			</div>
+			<div class="photo">
+				<img src="images/brend-photo4.png">
+			</div>
+			<div class="photo">
+				<img src="images/brend-photo5.png">
+			</div>
 		</div>
 		<div class="quote">
 			<p class="text">Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum</p>
@@ -345,9 +363,20 @@
 					<input type="text" placeholder="company name" class="label">
 				</div>
 				<div class="form-latter">
-					<input type="text" placeholder="write your message" class="label" >
+					<textarea placeholder="write your message" cols="100" rows="5" class="label"></textarea>
 				</div>
+				<div class="send-button">
+					<input type="submit" name="" value="SEND MESSAGE" class="button">
+
+				</div>
+				<p class="text">We’ll contact you as as possible. We don’t reply on Monday.</p>
 			</form>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="section-name">
+			<h2 class="section-title"></h2>
+			<p class="description"> &#169; 2015 Startup, Designed by ShapedTheme</p>
 		</div>
 	</div>
 </body>
