The html document is checked for validity

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
 	<meta charset="utf-8">
 	<title>Startup</title>
@@ -38,8 +38,8 @@
 		<div class="services-list">
 			<div class="services-item">
 				<div class="item">
-					<a href="#" class="symbol-link"><img src="images/letter-a.png" class="symbol"></a>
-					<a href="#" class="symbol-link-white"><img src="images/letter-a-white.png" class="symbol"></a>
+					<a href="#" class="symbol-link"><img src="images/letter-a.png" alt="Symbol" class="symbol"></a>
+					<a href="#" class="symbol-link-white"><img src="images/letter-a-white.png" alt="Symbol" class="symbol"></a>
 				</div>
 				<h3 class="title">Clean Typography</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
@@ -53,8 +53,8 @@
 			</div>
 			<div class="services-item">
 				<div class="item">
-					<a href="#" class="symbol-link"><img src="images/help.png" class="symbol"></a>
-					<a href="#" class="symbol-link-white"><img src="images/help-white.png" class="symbol"></a>
+					<a href="#" class="symbol-link"><img src="images/help.png" alt="Symbol" class="symbol"></a>
+					<a href="#" class="symbol-link-white"><img src="images/help-white.png" alt="Symbol" class="symbol"></a>
 				</div>
 				<h3 class="title">Clean Typography</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
@@ -73,7 +73,7 @@
 		<div class="workers-list">
 			<div class="item">
 				<div class="photo">
-					<img src="images/photo1.jpg">
+					<img src="images/photo1.jpg" alt="Photo">
 					<div class="saturation"></div>
 					<div class="social-list">
 						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
@@ -90,7 +90,7 @@
 			</div>
 			<div class="item">
 				<div class="photo">
-					<img src="images/photo2.jpg">
+					<img src="images/photo2.jpg" alt="Photo">
 					<div class="saturation"></div>
 					<div class="social-list">
 						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
@@ -107,7 +107,7 @@
 			</div>
 			<div class="item">
 				<div class="photo">
-					<img src="images/photo3.jpg">
+					<img src="images/photo3.jpg" alt="Photo">
 					<div class="saturation"></div>
 					<div class="social-list">
 						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
@@ -124,7 +124,7 @@
 			</div>
 			<div class="item">
 				<div class="photo">
-					<img src="images/photo4.jpg">
+					<img src="images/photo4.jpg" alt="Photo">
 					<div class="saturation"></div>
 					<div class="social-list">
 						<a href="#" class="link"><img src="images/facebook.png" alt="Symbol"></a>
@@ -162,7 +162,7 @@
 		</div>
 		<div class="work-levels">
 			<div class="level">
-				<img src="images/photo-work1.jpg" alt="">
+				<img src="images/photo-work1.jpg" alt="Photo">
 				<div class="saturation-red"></div>
 				<div class="continue">
 					<h3 class="title">Hair Dresser</h3>
@@ -171,7 +171,7 @@
 				</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work2.jpg" alt="" >
+				<img src="images/photo-work2.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -180,7 +180,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work3.jpg" alt="" >
+				<img src="images/photo-work3.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -189,7 +189,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work4.jpg" alt="" >
+				<img src="images/photo-work4.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -198,7 +198,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work5.jpg" alt="" >
+				<img src="images/photo-work5.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -207,7 +207,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work6.jpg" alt="" >
+				<img src="images/photo-work6.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -216,7 +216,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work7.jpg" alt="" >
+				<img src="images/photo-work7.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -225,7 +225,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work8.jpg" alt="" >
+				<img src="images/photo-work8.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -234,7 +234,7 @@
 					</div>
 			</div>
 			<div class="level">
-				<img src="images/photo-work9.jpg" alt="" >
+				<img src="images/photo-work9.jpg" alt="Photo" >
 				<div class="saturation-red"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
@@ -259,7 +259,7 @@
 		</div>
 		<div class="new">
 			<div class="photo">
-				<img src="images/photo6.jpg">
+				<img src="images/photo6.jpg" alt="Photo">
 			</div>
 			<div class="description">
 				<div class="date">
@@ -278,7 +278,7 @@
 		</div>
 		<div class="new">
 			<div class="photo">
-				<img src="images/photo7.jpg">
+				<img src="images/photo7.jpg" alt="Photo">
 			</div>
 			<div class="description">
 					<div class="date">
@@ -299,19 +299,19 @@
 	<div class="brends">
 		<div class="brend-symbols">
 			<div class="photo">
-				<img src="images/brend-photo1.png">
+				<img src="images/brend-photo1.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo2.png">
+				<img src="images/brend-photo2.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo3.png">
+				<img src="images/brend-photo3.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo4.png">
+				<img src="images/brend-photo4.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo5.png">
+				<img src="images/brend-photo5.png" alt="Brandin">
 			</div>
 		</div>
 		<div class="quote">
@@ -331,18 +331,18 @@
 		</div>
 		<div class="our-contacts">
 			<div class="address">
-				<img src="images/address.png" alt="" class="symbol">
+				<img src="images/address.png" alt="Symbol" class="symbol">
 				<h3 class="title">address</h3>
 				<p class="data"><span class="text">312, 7th Ave, New York</span>NY 101200, United States of America</p>
 			</div>
 			<div class="telephone">
-				<img src="images/phone.png" alt="" class="symbol">
+				<img src="images/phone.png" alt="Symbol" class="symbol">
 				<h3 class="title">hotline (24x7)</h3>
 				<p class="data"><a href="tel:+650052300" class="link">+65 0052 300</a>, <a href="tel:+6588251210" class="link">+65 88251 210</a>, <a href="tel:+8801723511340" class="link">+88 01723 511 340</a></p>
 
 			</div>
 			<div class="email">
-				<img src="images/mail.png" alt="" class="symbol">
+				<img src="images/mail.png" alt="Symbol" class="symbol">
 				<h3 class="title">e-mail</h3>
 				<p class="data"><a href="shapedtheme@gmail.com" class="link">shapedtheme@gmail.com</a>, <a href="khalilkode@gmail.com" class="link"> khalilkode@gmail.com  </a></p>
 	
@@ -351,22 +351,22 @@
 		<div class="latter">
 			<form id="formSubscribe">
 				<div class="form">
-					<input type="text" placeholder="your name" class="label">
+					<input type="text" name="name" placeholder="your name" class="label">
 				</div>
 				<div class="form">
-					<input type="email" placeholder="your e-mail" class="label">
+					<input type="email" name="name" placeholder="your e-mail" class="label">
 				</div>
 				<div class="form">
-					<input type="text" placeholder="your subject" class="label">
+					<input type="text" name="name" placeholder="your subject" class="label">
 				</div>
 				<div class="form">
-					<input type="text" placeholder="company name" class="label">
+					<input type="text" name="name" placeholder="company name" class="label">
 				</div>
 				<div class="form-latter">
 					<textarea placeholder="write your message" cols="100" rows="5" class="label"></textarea>
 				</div>
 				<div class="send-button">
-					<input type="submit" name="" value="SEND MESSAGE" class="button">
+					<input type="submit" name="name" value="SEND MESSAGE" class="button">
 
 				</div>
 				<p class="text">We’ll contact you as as possible. We don’t reply on Monday.</p>
@@ -375,7 +375,8 @@
 	</div>
 	<div class="footer">
 		<div class="section-name">
-			<h2 class="section-title"></h2>
+			<div class="section-title">
+			</div>
 			<p class="description"> &#169; 2015 Startup, Designed by ShapedTheme</p>
 		</div>
 	</div>
