--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li class="menu-item"><a href="#" class="link">Blog</a></li>
 				<li class="menu-item"><a href="#" class="link">Clients</a></li>
 				<li class="menu-item"><a href="#" class="link">Contact</a></li>
-			</ul>			
+			</ul>
 		</div>
 		<div class="slang">
 			<h1 class="title">Welcome to startup</h1>
@@ -30,14 +30,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="services-blok">
+	<div class="services-block">
 		<div class="section-name">
-			<h2 class="section-title">services</h2>
+			<h2 class="title">services</h2>
 			<p class="description">We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="services-list">
 			<div class="services-item">
 				<div class="item">
+					<!-- ?????????????????????????????????????? item -->
 					<a href="#" class="symbol-link"><img src="images/letter-a.png" alt="Symbol" class="symbol"></a>
 					<a href="#" class="symbol-link-white"><img src="images/letter-a-white.png" alt="Symbol" class="symbol"></a>
 				</div>
@@ -63,7 +64,7 @@
 	</div>
 	<div class="description-organization">
 		<div class="section-name">
-			<h2 class="section-title">About us</h2>
+			<h2 class="title">About us</h2>
 			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="about-organization">
@@ -82,7 +83,6 @@
 						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
-
 				<div class="data">
 					<span class="name">Md. Khalil Uddin</span>
 					<span class="position">Head of Ideas</span>
@@ -99,7 +99,6 @@
 						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
-
 				<div class="data">
 					<span class="name">Md. Khalil Uddin</span>
 					<span class="position">Head of Ideas</span>
@@ -116,7 +115,6 @@
 						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
-
 				<div class="data">
 					<span class="name">Md. Khalil Uddin</span>
 					<span class="position">Head of Ideas</span>
@@ -133,23 +131,22 @@
 						<a href="#" class="link"><img src="images/linkedin.png" alt="Symbol"></a>
 					</div>
 				</div>
-
 				<div class="data">
 					<span class="name">Md. Khalil Uddin</span>
 					<span class="position">Head of Ideas</span>
 				</div>
 			</div>
-		</div>	
+		</div>
 		<div class="arrow-right">
 			<img src="images/arrow-right.png" alt="Symbol">
 		</div>
 		<div class="arrow-left">
-		<img src="images/arrow-left.png" alt="Symbol">	
-		</div>	
+		<img src="images/arrow-left.png" alt="Symbol">
+		</div>
 	</div>
 	<div class="our-works">
 		<div class="section-name">
-			<h2 class="section-title">latest works</h2>
+			<h2 class="title">latest works</h2>
 			<div class="menu-works">
 				<ul class="works-list">
 					<li class="item"><a href="#" class="link">All</a></li>
@@ -163,7 +160,7 @@
 		<div class="work-levels">
 			<div class="level">
 				<img src="images/photo-work1.jpg" alt="Photo">
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 					<h3 class="title">Hair Dresser</h3>
 					<span class="text">Brandin</span>
@@ -172,7 +169,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work2.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -181,7 +178,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work3.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -190,7 +187,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work4.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -199,7 +196,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work5.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -208,7 +205,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work6.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -217,7 +214,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work7.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -226,7 +223,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work8.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -235,7 +232,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work9.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -245,7 +242,7 @@
 		</div>
 	</div>
 	<div class="reviews">
-		<div class="saturation-red"></div>
+		<div class="saturation"></div>
 		<div class="review">
 			<span class="text">Do you like OUR WORK so far?</span>
 			<span class="text">Let's talk about YOUR PROJECT!</span>
@@ -254,7 +251,7 @@
 	</div>
 	<div class="news">
 		<div class="section-name">
-			<h2 class="section-title">recent blog posts</h2>
+			<h2 class="title">recent blog posts</h2>
 			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="new">
@@ -297,6 +294,7 @@
 		</div>
 	</div>
 	<div class="brends">
+		<!-- brAnd -->
 		<div class="brend-symbols">
 			<div class="photo">
 				<img src="images/brend-photo1.png" alt="Brandin">
@@ -319,6 +317,7 @@
 			<span class="author">John Doe, Google Inc.</span>
 		</div>
 		<div class="digest-block">
+			<!-- ????? -->
 			<span class="digest-active"></span>
 			<span class="digest"></span>
 			<span class="digest"></span>
@@ -326,7 +325,7 @@
 	</div>
 	<div class="contact">
 		<div class="section-name">
-			<h2 class="section-title">get in touch</h2>
+			<h2 class="title">get in touch</h2>
 			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="our-contacts">
@@ -345,7 +344,7 @@
 				<img src="images/mail.png" alt="Symbol" class="symbol">
 				<h3 class="title">e-mail</h3>
 				<p class="data"><a href="shapedtheme@gmail.com" class="link">shapedtheme@gmail.com</a>, <a href="khalilkode@gmail.com" class="link"> khalilkode@gmail.com  </a></p>
-	
+
 			</div>
 		</div>
 		<div class="latter">
@@ -373,9 +372,11 @@
 			</form>
 		</div>
 	</div>
+
+	<!-- BAD FOOTER -->
 	<div class="footer">
 		<div class="section-name">
-			<div class="section-title">
+			<div class="title">
 			</div>
 			<p class="description"> &#169; 2015 Startup, Designed by ShapedTheme</p>
 		</div>
